--- a/g2p_csv_import/views/individuals_view.xml
+++ b/g2p_csv_import/views/individuals_view.xml
@@ -11,13 +11,14 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="g2p_registry_individual.view_individuals_list_tree"/>
         <field name="arch" type="xml">
-
-            <tree position="inside">
+            <!-- <tree position="inside">
                 <header>
-                   <!--<button string="Import" name="%(action_g2p_individual_import)d" type="action" class="oe_highlight" /> -->
-                   <button string="Import" name="action_g2p_individual_import" type="object" class="oe_highlight"/>
+                    <button string="Import" name="%(action_g2p_individual_import)d" type="action" class="oe_highlight" attrs="{'always_visible':True}"/>
                 </header>
-            </tree>
+            </tree> -->
+            <xpath expr="//tree" position="attributes">
+                <attribute name="js_class">button_in_tree</attribute>
+            </xpath>
         </field>
     </record>
 
